Fix navbar overlapse

--- a/_sass/_navbar.sass
+++ b/_sass/_navbar.sass
@@ -9,6 +9,8 @@ nav
   -o-transition: all 300ms ease
   -ms-transition: all 300ms ease
   background: #FFFFFF
+  margin-bottom: 0 !important
+
   &.shrink
     .container
       .navbar-nav
